--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,3 +17,9 @@ artifacts:
   discard-paths: no
   base-directory: build
   s3-prefix: code-build-outputs
+  secondary-artifacts:
+    cloudformationfile:
+      files:
+        - cloud-formtation.json
+      name: cloud-formtation
+      discard-paths: no
