--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,14 +15,13 @@ phases:
       - echo build is `date`
 artifacts:
   files:
-    - "**/*"
+    - "build/**/*"
   name: build-output
   discard-paths: no
-  base-directory: build
   s3-prefix: code-build-outputs
   secondary-artifacts:
     cloudformationfile:
       files:
         - cloud-formtation.json
-      name: cloud-formtation
+      name: cloudformtation
       discard-paths: no
