--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,8 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo $CODEBUILD_SOURCE_VERSION
-      - echo $CODEBUILD_WEBHOOK_BASE_REF
       - echo $CODEBUILD_WEBHOOK_TRIGGER
-      - npm i
+      - npm install
   build:
     commands:
       - npm build
