--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/node": "^12.6.8"
+    "@types/node": "^12.6.8",
+    "typescript": "^4.6.3"
   }
 }
