--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,12 +16,12 @@ phases:
       - echo build is completed
 artifacts:
   files:
-    - "build/**/*"
+    - "build/*"
   name: build-output
   discard-paths: no
   secondary-artifacts:
     cloudformationfiles:
       files:
-        - "cloud-formations/**/*"
-      name: cloud-formation-files
+        - "cloud-formations/*"
+      name: cloud-formation-files-1
       discard-paths: no
