--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,9 +19,11 @@ artifacts:
     - "build/*"
   name: build-output
   discard-paths: no
+  base-directory: build
   secondary-artifacts:
     cloudformationfiles:
       files:
         - "cloud-formations/*"
       name: cloud-formation-files-1
       discard-paths: no
+      base-directory: cloud-formations
