--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,23 +2,23 @@ version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@3.1
 jobs:
-  config-aws-cli:
+  source-branch-operations:
     executor: aws-cli/default
     steps:
       - checkout
-      
-      - aws-cli/setup:
-          profile-name: default
       - run:
-          name: print directory
-          command: ls
+          name: Detect source branch
+          command: SOURCEBRANCH=$(git show-branch | grep '*' | grep -v "$(git rev-parse --abbrev-ref HEAD)" | head -n1 | sed 's/.*\[\(.*\)\].*/\1/' | sed 's/[\^~].*//')
+  deploy-stack:
+    executor: aws-cli/default
+    steps:
+      - checkout
       - run:
-          name: print version of git
-          command: git --version
-      - run: 
-          aws lambda list-functions
+          name: echo source branch
+          command: echo $SOURCEBRANCH
 
 workflows:
   aws-cli:
     jobs:
-      - config-aws-cli
+      - source-branch-operations
+      - deploy-stack
