--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       - run:
           name: Detect source branch
           command: SOURCEBRANCH=$(git show-branch | grep '*' | grep -v "$(git rev-parse --abbrev-ref HEAD)" | head -n1 | sed 's/.*\[\(.*\)\].*/\1/' | sed 's/[\^~].*//')
+      - run:
+          name: Echo SOURCEBRANCH Variable 
+          command: echo $SOURCEBRANCH
   deploy-stack:
     executor: aws-cli/default
     steps:
