--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Detect source branch
-          command: git show-branch | (grep '*' | grep -v "$(git rev-parse --abbrev-ref HEAD)" | head -n1 | sed 's/.*\[\(.*\)\].*/\1/' | sed 's/[\^~].*//' || true)
+          command: git show-branch | grep '*' || grep -v "$(git rev-parse --abbrev-ref HEAD)" 
   deploy-stack:
     executor: aws-cli/default
     steps:
