--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
       - checkout
       - run:
           name: echo source branch
+          command: echo $CIRCLE_BRANCH
+      - run:
+          name: echo source branch
           command: git show-branch | grep -v "$(git rev-parse --abbrev-ref HEAD)" | head -n1 | sed 's/.*\[\(.*\)\].*/\1/' | sed 's/[\^~].*//'
       - run:
           name: set source branch
