--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,6 @@ workflows:
     jobs:
       - source-branch-operations
       - deploy-stack
+          requires:
+            - source-branch-operations
+      
