--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@3.1
-  mem: circleci/rememborb@0.0.2
+  # mem: circleci/rememborb@0.0.2
 
 jobs:
   source-branch-operations:
@@ -10,10 +10,10 @@ jobs:
       - checkout
       - run:
           name: TESTVAL=TESTVALUE
-          command:  TESTVAL=TESTVALUE
-      - mem/remember:
-          env_var: TESTVAL
-          value: $TESTVAL
+          command: TESTVAL=TESTVALUE
+      # - mem/remember:
+      #     env_var: TESTVAL
+      #     value: $TESTVAL
       - run:
           name: echo $TESTVAL
           command: echo $TESTVAL
@@ -21,11 +21,11 @@ jobs:
     executor: aws-cli/default
     steps:
       - checkout
-      - mem/recall:
-          env_var: TESTVAL
-      - run:
-          name: echo $TESTVAL
-          command: echo $TESTVAL
+      # - mem/recall:
+      #     env_var: TESTVAL
+      # - run:
+      #     name: echo $TESTVAL
+      #     command: echo $TESTVAL
 workflows:
   version: 2
   aws-cli:
